# AI-Assistant-App

./: .gitignore  DEPLOYMENT-HTTPS.md  README.md
AI-Assistant-Backend/: .gitignore  app.py  config.py  main.py  middleware.py  pyproject.toml  requirements.txt
AI-Assistant-Backend/src/api/: deps.py  exceptions.py
AI-Assistant-Backend/src/api/db/: database.py  models.py
AI-Assistant-Backend/src/api/routes/: auth.py  chat.py  file_upload.py  ingestion.py  projects.py
AI-Assistant-Backend/src/api/s3_bucket/: s3_bucket.py
AI-Assistant-Backend/src/api/schemas/: schemas.py
AI-Assistant-Backend/src/api/services/: auth.py  chat_deletion_service.py  chat_service.py  ingestion_service.py  namespace.py  project_deletion_service.py  project_service.py  s3_bucket_service.py
AI-Assistant-Backend/src/api/services/s3_bucket_service/: __init__.py  byte_io.py  constants.py  operations.py  paths.py
AI-Assistant-Backend/src/app/graphs/: graph.py  graph_state.py
AI-Assistant-Backend/src/app/mcp/: tavily_search.py
AI-Assistant-Backend/src/app/models/: models.py
AI-Assistant-Backend/src/app/nodes/: agent_nodes.py  context_management_node.py  router_nodes.py
AI-Assistant-Backend/src/app/rag_pipeline/: attachment_selector.py  reranker.py  vector_store.py
AI-Assistant-Backend/src/app/rag_pipeline/data_ingestion/: data_ingeston.py  offline_batch_ingestion.py
AI-Assistant-Backend/src/app/sys_prompts/: asistant_sys_prompt.py  conv_summarizer_sys_prompt.py
AI-Assistant-Backend/src/app/tools/: retrieval_tool.py
AI-Assistant-Frontend/: .gitignore  CLAUDE.md  README.md  (+3 more)
(+83 files in other folders)
