[project]
name = "ai-powered-documentation-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "boto3>=1.43.18",
    "gradio>=6.14.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langchain-openrouter>=0.2.3",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.1.0",
    "pinecone-client>=6.0.0",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.38",
    "tabulate>=0.10.0",
]
